added: notifications UI (ongoing)

--- a/app/src/main/res/navigation/home_navigation_graph.xml
+++ b/app/src/main/res/navigation/home_navigation_graph.xml
@@ -255,7 +255,7 @@
         tools:layout="@layout/fragment_notifications_page">
         <argument
             android:name="content"
-            app:argType="integer" />
+            app:argType="string" />
     </fragment>
 
     <include app:graph="@navigation/login_navigation_graph" />
