--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,5 @@
     <color name="light_gray_divider">#c6c6c6</color>
     <color name="grey_button">#717171</color>
     <color name="light_blue">#b3d9ff</color>
-    <color name="rating_yellow">#ffe234</color>
+    <color name="rating_yellow">#f8a81b</color>
 </resources>
