Created rename collection function, implemented rename and delete collection functions

--- a/app/src/main/res/navigation/home_navigation_graph.xml
+++ b/app/src/main/res/navigation/home_navigation_graph.xml
@@ -119,6 +119,9 @@
         <argument
             android:name="collectionName"
             app:argType="string"/>
+        <argument
+            android:name="collectionOwnerIdToken"
+            app:argType="string"/>
         <action
             android:id="@+id/action_collectionFragment_to_profileFragment"
             app:destination="@id/profileFragment"/>
