--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -184,13 +184,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:indeterminate="true"
+                android:visibility="gone"
+                tools:visibility="visible"
                 />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview_collections"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"/>
+                android:layout_marginTop="5dp"
+                android:visibility="gone"
+                tools:visibility="visible"
+                />
 
 
         </LinearLayout>
