--- a/app/src/main/res/layout/fragment_notifications_page.xml
+++ b/app/src/main/res/layout/fragment_notifications_page.xml
@@ -19,7 +19,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
         <View
             android:id="@+id/notificationsPage_separator"
