--- a/app/src/main/res/navigation/login_navigation_graph.xml
+++ b/app/src/main/res/navigation/login_navigation_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_continueRegistrationFragment"
+            app:destination="@id/continueRegistrationFragment" />
     </fragment>
     <activity
         android:id="@+id/homeActivity"
